frontend/shared/scss/base/text-styles.scss
@use 'variables' as *;

@mixin style-side-view-shadow() {
    box-shadow: 0px 2px 5px $color-side-view-shadow;
}
@mixin style-box-shadow() {
    box-shadow: 0px 4px 10px $color-box-shadow;
}

.style-side-view-shadow {
    @include style-side-view-shadow();
}
.style-input-shadow {
    box-shadow: 0px 2px 3px $color-box-shadow;
}
.style-overlay-shadow {
    box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
}

.style-nowrap {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.style-hr {
    height: $border-width-thin;
    background: $color-border;
    border-radius: $border-width-thin/2;
    padding: 0;
    margin: 20px 0;
    outline: none;
    border: 0;
}

.style-huge-title-1 {
    font-size: 34px;
    font-weight: $font-weight-semibold;
    line-height: 1.3;

    @media (max-width: 500px) {
        font-size: 30px;
    }

    @media (max-width: 400px) {
        font-size: 25px;
    }
}

.style-title-1 {
    font-size: 28px;
    font-weight: $font-weight-semibold;
    line-height: 1.4;

    @media (max-width: 350px) {
        font-size: 24px;
    }
}

// Use this style only for shorter titles
.style-navigation-title {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    font-size: 32px;
    font-weight: $font-weight-semibold;
    line-height: 1.4;

    @media (max-width: 350px) {
        font-size: 28px;
    }

    padding-bottom: 10px;

    &.with-icons {
        display: flex;
        align-items: center;

        > *:first-child {
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            min-width: 0;
        }

        > *:not(:first-child) {
            flex-shrink: 0;
        }
    }
}


.style-title-2 {
    font-size: 18px;
    line-height: 1.3;
    font-weight: $font-weight-semibold;
}

.style-title-3 {
    font-size: 17px;
    font-weight: $font-weight-semibold;
}

.style-title-small {
    font-size: 15px;
    font-weight: $font-weight-semibold;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.style-title-list {
    font-size: 16px;
    line-height: 1.3;
    font-weight: $font-weight-medium;

    @media (max-width: 400px) {
        font-size: 15px;
    }

    + p {
       padding-top: 3px; 
    }
}

.style-text-large {
    font-size: 20px;
    font-weight: $font-weight-default;
    line-height: 1.4;
}

.style-tag {
    font-size: 11px;
    text-transform: uppercase;
    font-weight: $font-weight-bold;
    color: $color-primary;

    @media (prefers-color-scheme: dark) {
        color: $color-primary-dark;
    }

    background: $color-primary-background;
    padding: 7px 8px;
    border-radius: $border-radius;
    line-height: 1;
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    max-width: 100%; // needed for inline-block to work with text-overflow
    box-sizing: border-box;

    &.large {
        font-size: 13px;
        padding: 7px 9px;
    }

    &.warn {
        color: $color-warning-dark;
        background: $color-warning-background;
    }

    &.error {
        color: $color-error-dark;
        background: $color-error-background;
    }

    &.success {
        color: $color-success-dark;
        background: $color-success-background;
    }


    &.secundary {
        color: $color-secundary-dark;
        background: $color-secundary-background;
    }

    &.tertiary {
        color: $color-tertiary-dark;
        background: $color-tertiary-background;
    }

    &.inline {
        // need to evaluate the usage of this class
        display: inline-block;
    }
}

.style-normal {
    font-size: 15px;
    line-height: 1.5;
    font-weight: $font-weight-default;
    color: $color-dark;
}

.style-definition-label {
    font-size: 12px;
    line-height: 1.5;
    font-weight: $font-weight-semibold;
    color: $color-primary;
    text-transform: uppercase;
    padding-bottom: 3px;
}

.style-definition-text {
    font-size: 18px;
    line-height: 1.5;
    font-weight: $font-weight-default;
    color: $color-dark;
}

.style-description {
    font-size: 15px;
    line-height: 1.5;
    font-weight: $font-weight-default;
    color: $color-gray-text;
    font-variation-settings: 'opsz' 19;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.pre-wrap {
    white-space: pre-wrap;
}

.style-limit-lines {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.style-description-block {
    @extend .style-description;
    padding-bottom: 20px;

    &:last-child {
        padding-bottom: 0;
    }
}

.style-description-small {
    font-size: 14px;
    line-height: 1.4;
    font-weight: $font-weight-default;
    color: $color-gray-text;
    font-variation-settings: 'opsz' 19;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.style-price-big {
    font-size: 20px;
    line-height: 1.4;
    font-weight: $font-weight-semibold;
    color: $color-primary;
}

.style-interactive-small {
    font-size: 14px;
    font-weight: $font-weight-semibold;
    color: $color-gray-text;

    @media (max-width: 400px) {
        font-size: 13px;
    }
}

.style-input {
    font-size: 15px;
    font-weight: $font-weight-default;
    line-height: 1.2;

    @media (max-width: 400px) {
        // Fix zoom on mobile devices
        font-size: 16px;
    }
}


.style-button {
    font-size: 16px;
    font-weight: $font-weight-semibold;
}

.style-button-small {
    font-size: 15px;
    font-weight: $font-weight-semibold;

    @media (max-width: 450px) {
        font-size: 16px;
    }
}

.style-button-smaller {
    @extend .style-button-small;
    font-weight: $font-weight-medium;

    @media (max-width: 450px) {
        font-size: 15px;
    }
}

.style-label {
    font-size: 14px;
    font-weight: $font-weight-semibold;
    display: block;
}

.style-table-head {
    font-size: 15px;
    font-weight: $font-weight-semibold;
}

.style-placeholder {
    font-size: 15px;
    font-weight: $font-weight-default;
    color: $color-gray-5;
}

.style-description-small {
    font-size: 14px;
    font-weight: $font-weight-default;
    line-height: 1.5;
}

.style-context-menu-item {
    font-size: 13px;
    font-weight: $font-weight-semibold;

    @media (max-width: 450px) {
        font-size: 15px;
        font-weight: $font-weight-default;
    }
}

.style-definition-term {
    font-size: 14px;
    font-weight: $font-weight-default;
    line-height: 1.5;
    color: $color-gray-text;

    @media (max-width: 550px) {
        font-size: 13px;
    }
}

.style-definition-description {
    @extend .style-description-small;
    color: $color-dark;

    font-size: 16px;

    @media (max-width: 550px) {
        font-size: 15px;
    }
}

.style-with-button {
    display: flex;
    flex-direction: row;

    &> *:first-child {
        flex-grow: 1;
    }

    &> *:last-child {
        flex-shrink: 0;
        margin-top: -13px;

        display: flex;
        flex-direction: row;
        align-items: center;

        > * {
            margin: 0 10px;

            &.button.text {
                margin: -5px 10px;
            }

            &:last-child {
                margin-right: 0;
            }
        }
    }
}

.radio-description {
    display: block;
    @extend .style-description-small;
}

.details-grid {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 8px 25px;


    &.small {
        grid-template-columns: 150px 1fr;
    }

    dt {
        @extend .style-definition-term;
        cursor: default;
    }

    dd {
        @extend .style-definition-description;
        
        -webkit-touch-callout: default;
        
        // user-select contain is not supported in safari
        -webkit-user-select: text;
        user-select: text;
        user-select: contain;
        position: relative;
        z-index: 1;
        cursor: default;

        transition: color 0.2s;
    }

    dd:before {
        content: '';
        position: absolute;
        top: -8px;
        left: -10px;
        right: -10px;
        bottom: -8px;
        border-radius: $border-radius;
        background: $color-primary-background;
        z-index: -1;
        opacity: 0;
        transition: opacity 0.2s;
    }


    @media (hover: hover) {
        dd:after {
            content: '';
            position: absolute;
            top: -8px;
            left: -10px;
            right: -10px;
            bottom: -8px;
            border-radius: $border-radius;
            background: $color-background-shade;
            z-index: -2;
            opacity: 0;
            transition: opacity 0.2s;
        }

        &.hover {
            dt:hover + dd, dd:hover{
                &:not(.icons):after {
                    opacity: 1;
                }
            }

            dd.icons + dd {
                &:before {
                    display: none;
                }
            }
        }
    }

    dd.copied {
        color: $color-primary;

        &:before {
            opacity: 1;
        }
    }
    
    .center {
        align-self: center;
    }

    .icons {
        line-height: 1;
        margin-left: auto;
    }

    dd.description {
        grid-column: 1 / span 2;
        margin-top: -5px;
        font-size: 15px;
    }
}

.main-text-container {
    &, .container {
        > h1:not([class]):first-child {
            padding-bottom: 10px;
            @extend .style-title-1;

            + p:not([class]), + p.style-description {
                @extend .style-description-block;
            }
        }
        
        > h2 {
            @extend .style-title-2;
            padding-bottom: 15px;
        }

        > h2.style-with-button {
            > *:first-child {
                padding-bottom: 15px;
            }
            padding-bottom: 0;
        }

        .segmented-control + h2 {
            padding-top: 15px;
        }

        > h2 + p {
            &:not([class]), &.style-description {
                @extend .style-description-block;
            }

            
        }

        > h2 + .st-list {
            margin-top: -10px;
        }

        > hr {
            @extend .style-hr;
            margin: 30px 0;
            margin: 30px calc(-1 * var(--st-horizontal-padding, 40px));

            @media (max-width: 550px) {
                margin: 20px 0;
            }
        }
    }
}

.style-illustration-img {
    width: 35px;
    height: 35px;
    margin-right: 5px;

    @media (max-width: 400px) {
        width: 30px;
        height: 30px;
        margin-right: 0px;
    }

    @media (max-width: 350px) {
        width: 25px;
        height: 25px;
    }
}

.style-bubble {
    background: $color-error;
    border-radius: 30px;
    font-size: 13px;
    color: $color-background;
    display: inline-block;
    text-align: center;
    padding: 0 4px;
    height: 21px;
    min-width: 21px;
    box-sizing: border-box;
    font-weight: $font-weight-bold;
    line-height: 21px;
    vertical-align: text-bottom;

    &.warn {
        color: $color-warning;
    }

    &.error {
        color: $color-error;
    }

    &.success {
        color: $color-success;
    }


    &.secundary {
        color: $color-secundary;
    }

    &.tertiary {
        color: $color-tertiary;
    }
}

.style-strong {
    font-weight: $font-weight-semibold;
}

